<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.ideasunlimited.savingscalculator.Activities.Area.AddAreaActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_above="@+id/buttonSave"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">
                <EditText android:id="@+id/edittextAreaName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/area_name"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">
                <EditText android:id="@+id/edittextAreaSize"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/area_size"/>
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content">

        <Button android:id="@+id/button_AddArea"
            android:layout_width="wrap_content" android:layout_height="match_parent"
            android:text="@string/save"
            android:onClick="AddArea"
            android:layout_weight="0.5"
            android:background="#FFF"
            android:textColor="#843F2B" />

        <Button android:id="@+id/button_AddAreaAndAppliances"
            android:layout_width="wrap_content" android:layout_height="match_parent"
            android:text="@string/save_and_add_appliance"
            android:background="#FFF"
            android:textColor="#843F2B"
            android:onClick="AddAreaAndAddAppliance"
            android:layout_weight="0.5" />
    </LinearLayout>

</RelativeLayout>
