<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/linearLayout">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spinnerApplianceName" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">
                <EditText android:id="@+id/edittext_appliance_wattage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:hint="@string/appliance_wattage"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">
                <EditText android:id="@+id/edittext_appliance_quantity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:hint="@string/appliance_quantity"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">
                <EditText android:id="@+id/edittext_appliance_working_hours"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:hint="@string/appliance_working_hours"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">
                <EditText android:id="@+id/edittextappliance_active_hours"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:hint="@string/appliance_active_hours"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">
                <EditText android:id="@+id/edittext_appliance_cost_per_unit_electricity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:hint="@string/appliance_cost_per_unit_electricity"/>
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/linearLayout">

        <Button android:id="@+id/button_appliance_cancel"
            android:layout_width="wrap_content" android:layout_height="match_parent"
            android:text="CANCEL"
            android:layout_weight="0.5"
            android:background="@drawable/buttonshape"
            android:textColor="#FFFFFF"
            android:onClick="CancelApplianceDetails"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="4dp"/>

        <Button android:id="@+id/button_appliance_save"
            android:layout_width="wrap_content" android:layout_height="match_parent"
            android:text="SAVE"
            android:background="@drawable/buttonshape"
            android:textColor="#FFFFFF"
            android:onClick="SaveApplianceDetails"
            android:layout_weight="0.5"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="4dp"/>
    </LinearLayout>

</RelativeLayout>