<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <!-- Contact Number -->
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/textView_CL_contactNumberLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="0.5"
                android:textIsSelectable="true"
                android:textColor="#000"
                android:textSize="20sp"
                android:text="@string/customer_contact_number"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/textView_CL_contactNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textIsSelectable="true"
                android:textColor="#000"
                android:textSize="20sp"
                android:layout_weight="0.5"
                android:gravity="end"
                android:layout_margin="5dp"
                android:text="hello" />
        </LinearLayout>

        <!-- Number Of Areas -->
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/textView_CL_areaNumbersLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="0.5"
                android:textIsSelectable="true"
                android:textColor="#000"
                android:textSize="20sp"
                android:text="@string/number_of_areas"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/textView_CL_areaNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textIsSelectable="true"
                android:textColor="#000"
                android:textSize="20sp"
                android:layout_weight="0.5"
                android:gravity="end"
                android:layout_margin="5dp"
                android:text="hello" />
        </LinearLayout>

        <!-- Total Savings -->
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/textView_CL_areaTotalSavingsLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="0.5"
                android:textIsSelectable="true"
                android:textColor="#000"
                android:textSize="20sp"
                android:text="@string/total_savings"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/textView_CL_TotalSavings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textIsSelectable="true"
                android:textColor="#000"
                android:textSize="20sp"
                android:layout_weight="0.5"
                android:gravity="end"
                android:layout_margin="5dp"
                android:text="hello" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <Button android:id="@+id/button_CL_Call"
                android:layout_width="wrap_content" android:layout_height="match_parent"
                android:text="CALL"
                android:layout_weight="0.5"
                android:background="#FFF"
                android:textColor="#843F2B" />

            <Button android:id="@+id/button_CL_Details"
                android:layout_width="wrap_content" android:layout_height="match_parent"
                android:text="Details"
                android:background="#FFF"
                android:textColor="#843F2B"
                android:layout_weight="0.5" />
        </LinearLayout>


    </LinearLayout>

</LinearLayout>